src/snapshots/afrotd__parser__tests__rule_html_6.1.8.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.1.8 Fouls durch das Kicking Team
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Strafen für alle Fouls durch das Kicking Team während eines
                Free-Kick-Spieles, außer der Behinderung beim Fangen eines
                Kicks (Regel 6.4), können je nach Wahl von Team B vom Previous
                Spot mit der Wiederholung des Downs oder von dem Punkt
                durchgeführt werden, an dem der anschließende Dead Ball zu Team
                B gehört.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.1.8"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
