src/snapshots/afrotd__parser__tests__rule_html_6.2.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.2.2 Receiving Team
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Geht ein Free Kick zwischen den Goallines ins Aus, gehört er
                zum Receiving Team an der entsprechenden Hash Mark. Geht der
                Free Kick hinter einer Goalline ins Aus, gehört er zu dem Team,
                das diese Goalline verteidigt (A.R. 6.2.2.I bis 6.2.2.IV).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.2.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
