src/snapshots/afrotd__parser__tests__rule_html_6.3.11.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.3.11 Freier Ball hinter der Goalline
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Es ist eine Violation für illegales Berühren (Regel 6.3.2),
                wenn ein Team ASpieler einen Scrimmage Kick in Team B’s Endzone
                schlägt, nachdem der Kick die neutrale Zone überquert hat und
                danach unberührt von Team B ist. Der Punkt der Violation ist
                Team B’s 20-Meterlinie. Das ist ein Spezialfall des Schlagens
                eines Balles in der Endzone und kein Foul (A.R. 6.3.11.I bis
                6.3.11.V und A.R. 2.12.2.I).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.3.11"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
