src/snapshots/afrotd__parser__tests__rule_html_6.3.12.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.3.12 Spieler im Aus
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Team A-Spieler, der während eines Scrimmage Kick-Spieles
                ins Aus geht, darf es während des laufenden Downs nicht wieder
                betreten (Ausnahme: Das gilt nicht für einen Team A-Spieler,
                der ins Aus geblockt wurde und sofort versucht, wieder ins Feld
                zu gelangen).
            </p>
            <p>
                <strong>Strafe: Live Ball Foul. 5 Meter vom Previous Spot oder,
                wenn der Scrimmage Kick die neutrale Zone überquert, 5 Meter
                von dem Punkt, an dem der anschließende Dead Ball zu Team B
                gehört [S19].</strong>
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.3.12"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
