src/snapshots/afrotd__parser__tests__rule_html_6.3.13.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.3.13 Fouls durch das Kicking Team
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Strafen für alle Fouls durch das Kicking Team, außer der
                Behinderung beim Fangen eines Kicks (Regel 6.4) während eines
                Scrimmage Kick-Spieles, bei dem der Kick die neutrale Zone
                überquert (ausgenommen Fieldgoalversuche), können gemäß den
                Regeln entweder vom Previous Spot als Basic Spot mit der
                Wiederholung des Downs (Ausnahme: die Strafoption für ein Foul
                in Team A’s Endzone ist ein Safety) oder von dem Punkt
                durchgeführt werden, an dem der anschließende Dead Ball zu Team
                B gehört, je nach Wahl von Team B (A.R. 6.3.13.I bis
                6.3.13.III).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.3.13"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
